--- a/Weather Site/public/style.css
+++ b/Weather Site/public/style.css
@@ -1,29 +1,45 @@
-body{
-    background-color: #212121;
-}
-.card {
+/* .card {
     width: 190px;
     height: 254px;
     border-radius: 30px;
     background: #212121;
     box-shadow: 15px 15px 30px rgb(25, 25, 25),
                 -15px -15px 30px rgb(60, 60, 60);
+   } */
+.container{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.search-bar{
+    background-color: black;
+    height: 80px;
+    width: 310px;
+    border-radius: 15px;
+    margin-bottom: 50px;
+}
+.input {
+    z-index: 1;
+    color: #8707ff;
+    border: 2px solid #8707ff;
+    border-radius: 10px;
+    padding: 10px 25px;
+    background: white;
+    max-width: 190px;
+    margin-top: 17px;
+    margin-left:20px;
+   }
+   
+   .input:active {
+    box-shadow: 2px 2px 15px #8707ff inset;
    }
    
 .h1{
     color: yellow;
 }
 
-.card input {
-    margin-top: 20px;
-    border-radius: 10px;
-    z-index: 1;
-    color: black;
-    font-size: 2em;
-    height: 10%;
-    width: 90%;
-    margin-left: 5px;
-  }
 .weather-info{
     z-index: 100;
     display: flex;
@@ -31,7 +47,84 @@ body{
 }
 
 .fields{
-    color: yellow;
+    color: black;
 }
+
+.cityName{
+    font-size: 40px;
+    font-display: bold;
+    text-align: center;
+}
+
+.temp{
+    margin-top: 30px;
+    font-size: 30px;
+}
+   .card {
+    position: relative;
+    width: 400px;
+    height: 400px;
+    border-radius: 14px;
+    z-index: 1111;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+    ;
+  }
+  
+  .bg {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 390px;
+    height: 390px;
+    z-index: 2;
+    background: rgba(255, 255, 255, .95);
+    backdrop-filter: blur(24px);
+    border-radius: 10px;
+    overflow: hidden;
+    outline: 2px solid white;
+  }
+  
+  .blob {
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-color: #ff0000;
+    opacity: 1;
+    filter: blur(12px);
+    animation: blob-bounce 5s infinite ease;
+  }
+  
+  @keyframes blob-bounce {
+    0% {
+      transform: translate(-100%, -100%) translate3d(0, 0, 0);
+    }
+  
+    25% {
+      transform: translate(-100%, -100%) translate3d(100%, 0, 0);
+    }
+  
+    50% {
+      transform: translate(-100%, -100%) translate3d(100%, 100%, 0);
+    }
+  
+    75% {
+      transform: translate(-100%, -100%) translate3d(0, 100%, 0);
+    }
+  
+    100% {
+      transform: translate(-100%, -100%) translate3d(0, 0, 0);
+    }
+  }
+  
+
 
   
