--- a/Weather Site/public/style.css
+++ b/Weather Site/public/style.css
@@ -48,22 +48,52 @@
 
 .fields{
     color: black;
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-left: 4px;
+}
+.separator {
+  width: 85%;
+  height: 1px;
+  background: black;
+  margin: 16px 20px;
 }
 
 .cityName{
-    font-size: 40px;
+    font-size: 50px;
     font-display: bold;
+    margin-top: 8px;
     text-align: center;
 }
 
-.temp{
+.temp-dsc{
     margin-top: 30px;
-    font-size: 30px;
+    font-size: 33px;
+    text-transform: capitalize;
+    margin-top: 25px;
 }
+
+.components{
+  display: flex;
+}
+
+.component-text{
+  margin-top: 25px;
+  flex:1;
+}
+.component-img{
+  max-width: 100%;
+  height: auto;
+}
+
+.img{
+  margin-bottom: 50px;
+}
+
    .card {
     position: relative;
     width: 400px;
-    height: 400px;
+    height: 370px;
     border-radius: 14px;
     z-index: 1111;
     overflow: hidden;
