--- a/Weather Site/public/style.css
+++ b/Weather Site/public/style.css
@@ -1,11 +1,10 @@
-/* .card {
-    width: 190px;
-    height: 254px;
-    border-radius: 30px;
-    background: #212121;
-    box-shadow: 15px 15px 30px rgb(25, 25, 25),
-                -15px -15px 30px rgb(60, 60, 60);
-   } */
+body{
+  background: #672d80;
+}
+h1{
+  color: #91b9f4;
+  font-family: 'Inconsolata', monospace;
+}
 .container{
     display:flex;
     flex-direction: column;
@@ -15,7 +14,7 @@
 
 .search-bar{
     display: flex;
-    background-color: black;
+    background-color: #a447cc;
     height: 80px;
     width: 310px;
     border-radius: 15px;
@@ -31,17 +30,15 @@
     background: white;
     max-width: 190px;
     margin-top: 17px;
-    margin-left:20px;
+    margin-left:17px;
     height: 20px;
+    font-size: large;
    }
    
    .input:active {
     box-shadow: 2px 2px 15px #8707ff inset;
    }
 
-.h1{
-    color: yellow;
-}
 
 .weather-info{
     z-index: 100;
@@ -104,7 +101,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+    box-shadow: 20px 20px 60px #7a64f7, -20px -20px 60px #7a64f7;
     ;
   }
   
@@ -115,11 +112,11 @@
     width: 390px;
     height: 390px;
     z-index: 2;
-    background: rgba(255, 255, 255, .95);
+    background: rgba(165, 72, 205, 0.95);
     backdrop-filter: blur(24px);
     border-radius: 10px;
     overflow: hidden;
-    outline: 2px solid white;
+    outline: 1px solid #a548cd;
   }
   
   .blob {
@@ -130,7 +127,7 @@
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    background-color: #ff0000;
+    background-color: #d87af6;
     opacity: 1;
     filter: blur(12px);
     animation: blob-bounce 5s infinite ease;
